--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:600,700"
       rel="stylesheet"
     />
-    <title>A simple calculator</title>
+    <title>Calculator_PM</title>
   </head>
   <body>
     <div id="container">
